# DuneII

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  TODO.md  TODO.txt  docker.sh  output.txt
.cache/clangd/index/: AnimationManager.cpp.D1BD39DF99BB33CF.idx  AnimationManager.hpp.ED45BCC1F1393598.idx  AssetManager.hpp.11DD623C21AEE439.idx  AssetManager.inl.5C378F59A19D7DA8.idx  Assets.hpp.637B6A8A80D1AA7E.idx  Button.cpp.FFD81D5BC31D94DA.idx  Button.hpp.BCD4FD7A6DA8D397.idx  ConstructionMenu.cpp.E46B07991817590D.idx  ConstructionMenu.hpp.EC0F26B2E20C9949.idx  Cursor.cpp.33484F74096F17A1.idx  Cursor.hpp.2DEDE89ACDD1DF1D.idx  DuneII.cpp.D22FE8A6C013016D.idx  DuneII.hpp.7FB5BD19DA087A75.idx  DuneII.inl.8CAC1E0CD04FFB97.idx  Engine.cpp.0DD3FDB2FB60C706.idx  Engine.hpp.66DC657FE1E4F180.idx  Engine.inl.04D54F509134E2ED.idx  Enums.hpp.5A10A634D0A1C59C.idx  ExternalMath.cpp.9C9A569529D2277F.idx  ExternalMath.hpp.08B588C213939A80.idx  FileProvider.cpp.246CCA714152E175.idx  FileProvider.hpp.0A265983681E75DD.idx  Game.cpp.D8B9B5A4DBD8733E.idx  Game.hpp.3342DB8E8CF10E08.idx  GameInfo.cpp.C11CF297FFB483F5.idx  GameInfo.hpp.E659166015583418.idx  GeometryGenerator.cpp.6629ECF51402D658.idx  GeometryGenerator.hpp.BA3E96FF582DFDC1.idx  GlBuffer.cpp.F0DC9A9654F4BEA8.idx  GlBuffer.hpp.E95C1F29D1EA906C.idx  HeadUpDisplay.cpp.6ECF272D0913BA62.idx  HeadUpDisplay.hpp.9274D5F8479F4E28.idx  Meshes.hpp.2F23F6D9D971F82A.idx  Mission.cpp.4CE1C461186A8145.idx  Mission.hpp.081C822433502E0F.idx  OrthogonalCamera.cpp.F7F6C67996A629B8.idx  OrthogonalCamera.hpp.492BC22B96B22D9E.idx  ParticleSystem.cpp.55EE68115A6F17CE.idx  ParticleSystem.hpp.2A0A31015730874F.idx  PickHouse.cpp.30D17F4A7D9F3A45.idx  (+31 more)
res/animations/: CursorFrames.xml
res/audio/: 01-Opening.flac  03-Ammon's-Advice.flac  04-Radnor's-Scheme.flac  11 - Evasive Action.flac  12 - Chosen Destiny.flac  13-Conquest.flac  14-Slitherin.flac  16 - Atredies Dirge.flac  17-Ordos-Dirge.flac
res/maps/: Atreides-1.tmx  Atreides-8.tmx  Atreides8.tmx  Harkonnen-1.tmx  Ordos-1.tmx
res/shaders/: particles.frag  particles.vert  particles_quads.geom
src/: main.cpp  sources.cmake
src/animation/: Animation.cpp  Animation.hpp  AnimationData.hpp  AnimationManager.cpp  AnimationManager.hpp
src/app/: Application.cpp  Application.hpp  Game.cpp  Game.hpp
src/application/: MainWindow.cpp  MainWindow.hpp
src/application/context/: Context.cpp  Context.hpp
src/application/game/: Game.cpp  Game.hpp  Game.inl
src/application/window/: MainWindow.cpp  MainWindow.hpp  WindowData.hpp
src/assets/: AssetManager.cpp  AssetManager.hpp  AssetManager.inl
src/common/: Assets.hpp  Defines.hpp  Enums.hpp  ExternalMath.cpp  ExternalMath.hpp  FileProvider.cpp  FileProvider.hpp  GraphicsUtils.cpp  GraphicsUtils.hpp  MathUtils.cpp  MathUtils.hpp  MemoryAllocator.hpp  MemoryAllocator.inl  NonCopyable.hpp  NonMovable.hpp  ObjectPool.hpp  ObjectPool.inl
src/common/action/: Action.cpp  Action.hpp  ActionData.hpp  ActionManager.cpp  ActionManager.hpp
src/common/allocator/: MemoryAllocator.hpp
src/common/info/: GameInfo.cpp  GameInfo.hpp
src/common/math/: ExternalMath.cpp  ExternalMath.hpp
src/ecs/: EntityManager.cpp  EntityManager.hpp  SystemManager.cpp  SystemManager.hpp  SystemManager.inl
src/ecs/common/: Component.hpp  ComponentContainer.hpp  ECSTypes.hpp  EntityContainer.cpp  EntityContainer.hpp  EntityContainer.inl  EntityManager.cpp  EntityManager.hpp  EntityManager.inl  EntitySet.cpp  EntitySet.hpp  EntitySet.inl  EntitySetIterator.hpp  SparseSet.hpp  SparseSet.inl  Visitor.hpp
src/ecs/components/: Animation.cpp  Animation.hpp  Bounds.cpp  Bounds.hpp  Sprite.cpp  Sprite.hpp  SpriteComponent.cpp  SpriteComponent.hpp  Structure.hpp
src/ecs/entity/: Entity.cpp  Entity.hpp  Entity.inl
src/ecs/systems/: AnimationController.cpp  AnimationController.hpp  CullingController.cpp  CullingController.hpp  CursorController.cpp  CursorController.hpp  MoveSystem.cpp  MoveSystem.hpp  MovementController.cpp  MovementController.hpp  SpriteRenderSystem.cpp  SpriteRenderSystem.hpp  ViewportController.cpp  ViewportController.hpp
src/effects/: ScreenBlackoutEffect.cpp  ScreenBlackoutEffect.hpp
src/effects/blackout/: ScreenBlackoutEffect.cpp  ScreenBlackoutEffect.hpp
src/effects/particles/: ParticleSystem.cpp  ParticleSystem.hpp
src/files/: FileProvider.cpp  FileProvider.hpp  Shader.cpp  Shader.hpp  StbImage.cpp  StbImage.hpp  TiledMapLoader.cpp  TiledMapLoader.hpp
src/game/: Application.cpp  Application.hpp  DuneII.cpp  DuneII.hpp  DuneII.inl  Engine.cpp  Engine.hpp  Engine.inl  Game.cpp  Game.hpp
src/game/scenes/: Scene.cpp  Scene.hpp
src/graphics/: Mesh.cpp  Mesh.hpp  Meshes.cpp  Meshes.hpp  OrthogonalCamera.cpp  OrthogonalCamera.hpp  Sprite2D.hpp  Transform2D.cpp  Transform2D.hpp
src/graphics/animation/: AnimationManager.cpp  AnimationManager.hpp
src/graphics/camera/: OrthoMatrix.cpp  OrthoMatrix.hpp  OrthogonalCamera.cpp  OrthogonalCamera.hpp
src/graphics/geometry/: GeometryGenerator.cpp  GeometryGenerator.hpp
src/graphics/outline/: Outline.cpp  Outline.hpp
src/graphics/quad/: Quad.cpp  Quad.hpp
src/graphics/shaders/: ShaderProgram.cpp  ShaderProgram.hpp
src/graphics/sprites/: SpriteManager.cpp  SpriteManager.hpp
src/graphics/texture/: Texture2D.cpp  Texture2D.hpp
src/graphics/transform/: Transform2D.cpp  Transform2D.hpp
src/loaders/: Assets.cpp  Assets.hpp  Assets.inl
src/managers/: AssetManager.cpp  AssetManager.hpp  AssetManager.inl  SceneManager.cpp  SceneManager.hpp  SceneManager.inl
src/scenes/: BattleField.cpp  BattleField.hpp  Scene.cpp  Scene.hpp  SceneNode.cpp  SceneNode.hpp  SceneNode.inl  TitleScreen.cpp  TitleScreen.hpp
src/shaders/: color_outline.frag  color_outline.vert  color_sprite.frag  color_sprite.vert  entity_view.frag  selection.frag  selection.vert  sprite.frag  title_screen_button.frag
src/states/: GameState.cpp  GameState.hpp
src/ui/: Cursor.cpp  Cursor.hpp
src/utils/: Defines.hpp  FileProvider.cpp  FileProvider.hpp  ObjectPool.hpp  ObjectPool.inl  Resources.cpp  Resources.hpp
(+165 files in other folders)
